style(css): Adjust link color and fix link z-index

--- a/styles.css
+++ b/styles.css
@@ -74,11 +74,13 @@ p {
   gap: 14px;
   margin-top: 200px;
   padding-top: 12px;
+  position: relative;
+  z-index: 1;
 }
 
 .link {
   background-color: hsla(0, 0%, 0%, 0.4);
-  color: hsla(0, 0%, 100%, 0.8);
+  color: hsla(0, 0%, 100%, 0.9);
   padding: 20px;
   border-radius: 50px;
   text-decoration: none;
